--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "sass": "^1.57.1"
